[package]
name = "fs_esl_codec"
version = "0.0.1"
edition = "2021"
authors = ["semubico@protogen.engineering"]
description = "Freeswitch esl socket decoder for tokio Framed socket reading"
readme = "README.md"
license-file = "LICENSE"
repository = "https://git.protogen.engineering/semubico/freeswitch-esl/"

[lib]
crate-type = ["staticlib", "rlib"] 
bench = false

[[example]]
name = "untyped"
path = "examples/untyped.rs"

[dependencies]
serde = { version = "^1.0.210", features = ["derive"] }
tokio-util = { version = "0.7.12", features = ["codec"] }
thiserror = "^1.0.64"

[dev-dependencies]
anyhow = "1.0.89"
tokio = { version = "1.0", features = ["full"]}
futures = "^0.3.30"
serde_json = { version = "^1.0.128" }

